# CustomShell

./: .gitignore  CMakeLists.txt  README.md  microshell_run  shell.c  shell.h  shell_exec.c  util.c  util.h
src/: CMakeLists.txt  headers.h  job.c  job.h  process.c  process.h  shell.c  shell.h  shell_exec.c
src/job/: job.c  job.h
src/process/: process.c  process.h
src/shell/: shell.c  shell.h  shell_functions.c
src/util/: colors.h
test/: CMakeLists.txt  ShellTests.c  ShellTests.cpp  test.cpp
